Tagging and formatting old posts

--- a/jekyll/_posts/2010-08-01-unix-and-the-emerging-web.html
+++ b/jekyll/_posts/2010-08-01-unix-and-the-emerging-web.html
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: UNIX and the Emerging Web
+tags: [Programming]
 ---
 <p>After reading "The Art Of UNIX Programming" again, it's got me thinking about the
 nature of the technological explosion that has happened since the
@@ -57,7 +58,7 @@ technology.</p>
 <p>In some ways, I think that the values of the UNIX crowd are coming full circle
 with emerging web trends. <a href="http://www.readwriteweb.com/">ReadWriteWeb</a> has been
 blogging for years about the potential of a web that's as easy to write as it is
-to read. 
+to read.
 <a href="http://www.readwriteweb.com/archives/beyond_social_web_internet_of_things.php">This post</a>
  is a good summary of emerging trends like structured data. But I think that to
 really acheive this flexibility, internet and desktop architecture needs to
