--- a/jekyll/_posts/2010-08-22-meota-summer-photographic-seminar.html
+++ b/jekyll/_posts/2010-08-22-meota-summer-photographic-seminar.html
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Meota Summer Photographic Seminar
+tags: [Photography]
 ---
 <p>Just finishing up the weekend photographic seminar at the lake. Got some good shots and some good practice at composition, lighting and rhythm.</p>
 
