--- a/jekyll/_posts/2010-10-29-jquery-extensions.html
+++ b/jekyll/_posts/2010-10-29-jquery-extensions.html
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: jQuery Extensions?
+tags: [Programming, JavaScript]
 ---
 <p>I've been working with jQuery a fair bit lately. Although it gives you a fair number of handy shortcuts, I think it's true value is as an educational tool on how to use JavaScript effectively.</p>
 <p>This means diving in to the jQuery sources. This means learning what anonymous functions and closures are all about, letting it settle, and then learning what they're about again. It also means taking 98% of all the JavaScript tutorials on the internets and throwing them out. Well, maybe not throwing them out, but putting them in to context.</p>
