--- a/jekyll/_posts/2010-08-11-chaotic-data.html
+++ b/jekyll/_posts/2010-08-11-chaotic-data.html
@@ -32,14 +32,14 @@ bothered by the shortcoming.</p>
 <p>This list has a few other interesting qualities that don't transfer well to the
 digital domain: </p>
 
-<p><ol><li>It's taped to the door.
-   Location and size mean a lot in the physical world.</li>
-<li>It has no definite structure.
-   Anything could be added or crossed off the list with ease.</li>
-<li>It's author is obvious.
-   The handwriting is an echo of the mind of the author.</li>
-</ol>
+<p>
+  <ol>
+    <li>It's taped to the door. Location and size mean a lot in the physical world.</li>
+    <li>It has no definite structure. Anything could be added or crossed off the list with ease.</li>
+    <li>It's author is obvious. The handwriting is an echo of the mind of the author.</li>
+  </ol>
 </p>
+
 <p>My point is not that my Grandpa has a habit of making strange artifacts, my
 point is that we are more unique, creative and human when we're not forced to
 order our data along the way. </p>
@@ -49,13 +49,17 @@ parsing the messy world of human language and thought is not a simple task for
 computer systems. It is much easier to build rules and frameworks and force
 humans to fit their ideas into them; to meet the computer halfway. This has a
 few effects:
-<ol><li>it allows the less creative minds to be efficiently less
-creative and feel organized</li><li>it encourages independant thinkers to
-constantly sabotage the system for entertainment</li><li>it erodes the capacity
-for beautiful, unstructured and creative enterprises.</li></ol></p>
+
+<ol>
+  <li>it allows the less creative minds to be efficiently less creative and feel organized</li>
+  <li>it encourages independant thinkers to constantly sabotage the system for entertainment</li>
+  <li>it erodes the capacity for beautiful, unstructured and creative enterprises.</li>
+</ol>
+
+</p>
 
 <p>I think we too often forget the distinction between the technologies that are
-built for enterprise and those built for personal use. This is probably because 
+built for enterprise and those built for personal use. This is probably because
 all of the tools are built for enterprise. All of them. The ones that aren't are
 garbage. Web2.0 or 3.0 or whatever, only really make sense for businesses and
-consumers. Not for <em>people</em>.</p><div class="blogger-post-footer"><img alt="" height="1" src="https://blogger.googleusercontent.com/tracker/3761776372224414205-6623399797335101554?l=amxor.blogspot.com" width="1" /></div>
+consumers. Not for <em>people</em>.</p>
