--- a/jekyll/_posts/2010-08-24-auto-metadata.html
+++ b/jekyll/_posts/2010-08-24-auto-metadata.html
@@ -1,13 +1,14 @@
 ---
 layout: post
 title: Auto Metadata
+tags: [Photography, Archiving]
 ---
 <p>One interesting part of the weekend photographic seminar I just got
 back from was the emphasis on metadata.</p>
 
 <p>It's important to take great photos, but it's just as important to
 know how you got those results. In the days of film, A photographer
-would keep a shooting log, recording aperature, speed, lens, etc. A 
+would keep a shooting log, recording aperature, speed, lens, etc. A
 decent digital camera will record all that information for you as long
 as you know where to look for it.</p>
 
@@ -55,5 +56,5 @@ you moved those files. </p>
 <p>The biggest problem with impure metadata, like the one's I've
 mentioned, is they can be very hard to <em>normalize</em>. There may be
 information attached as file names, tags and folder structures but
-it's all been manually assigned by what makes sense at the time. This 
-manual metadata will always be very fragmented and incomplete.</p><div class="blogger-post-footer"><img alt="" height="1" src="https://blogger.googleusercontent.com/tracker/3761776372224414205-4952441295601828251?l=amxor.blogspot.com" width="1" /></div>
+it's all been manually assigned by what makes sense at the time. This
+manual metadata will always be very fragmented and incomplete.</p>
