--- a/jekyll/_posts/2010-11-25-chaining-in-javascript.html
+++ b/jekyll/_posts/2010-11-25-chaining-in-javascript.html
@@ -1,10 +1,11 @@
 ---
 layout: post
 title: Chaining in JavaScript
+tags: [Programming, JavaScript]
 ---
 <p>It's been bugging me for a while that I didn't understand the method behind jQuery's function chaining. So I built the smallest functional version of it. I call it aQuery <em>(for andy, or awesome).</em></p><p>This is the calling code:</p><pre>window.onload = function(){
     aQ("#content").height().background().elem.innerHTML = "hello";
-};</pre><p>I have made two functions .height() and .background(), which do pretty much what their names suggest. The elem is the original object and so I use it to call "native" code. Maybe should have called it "target" to be consistent.</p><p>Here's the meat and potatoes of the "library":</p><code><pre>(function() {   
+};</pre><p>I have made two functions .height() and .background(), which do pretty much what their names suggest. The elem is the original object and so I use it to call "native" code. Maybe should have called it "target" to be consistent.</p><p>Here's the meat and potatoes of the "library":</p><code><pre>(function() {
     var aQ = function(selector) {
         return new aQuery.fn(selector);
     };
@@ -25,7 +26,7 @@ title: Chaining in JavaScript
         };
         return this;
     };
-    
+
     return (window.aQ = aQ);
 })();</pre></code><br />
 <p>Each call to aQ makes a new object, primed with the selector string. This object has several functions and attributes, and all the functions return "this", so they can be chained together. As it stands, it's not dynamic at all but you can use your imagination!</p><div class="blogger-post-footer"><img alt="" height="1" src="https://blogger.googleusercontent.com/tracker/3761776372224414205-1137314740750306694?l=amxor.blogspot.com" width="1" /></div>
